# dataset-ar6

./: .gitignore  README.md  pyproject.toml  structure.drawio
.dvc/: config
data/data_import/: .gitignore  ev_ms_check.csv.dvc  gdp_vehicle_fitting.parquet.dvc  ms_except4region.csv.dvc  wind_ms_check.csv.dvc
data/data_man/: .gitignore  r10_list.csv.dvc  ssp_family.csv  trpele_exctrain_ratio.csv
data/data_task/: .gitignore  gdp_per_cap_future.parquet.dvc  r10_abate_ratio_by_ele.parquet.dvc  r10_cap_renew.parquet.dvc  r10_emissions_co2.parquet.dvc  r10_emissions_co2_ele.parquet.dvc  r10_emissions_co2_trp.parquet.dvc  r10_supply_ele.parquet.dvc  trp_ele_future.parquet.dvc
scripts/sql/: ms_check_GEM.sql  ms_check_co2&element.sql  ms_check_elesup&element.sql  ms_check_trp_ele.sql
src/: csv2parquet.py  func.py  r10_abate_ratio_by_ele.py  r10_cap_renew.py  r10_emissions_co2.py  r10_supply_ele.py  task_ev.py  task_ev_gdp.py  task_ev_trpele.py
