[tool.poetry]
name = "ar6"
version = "0.1.0"
description = ""
authors = ["Chen Huang <toocold@foxmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.12"
polars = "^0.20.5"
proplot = "^0.9.7"
visidata = "^3.0.2"
pyarrow = "^15.0.0"
duckdb = "^0.9.2"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"
